# SnapDL-2.0

./: .gitignore  README.md  downloader.py  estrutura_snapdl.txt  ffmepg_helper.py  flet.config.json  main.py  notes.txt  pyproject.toml  requirements.txt  screen_config.py  search.py  snapdl_uix.py
app/: __init__.py  downloader.py  downloads_page.py  ffmepg_helper.py  ffmpeg_helper.py  homepage.py  results_page.py  screen_config.py  search.py  settings_page.py  snapdl_uix.py
assets/: result_placeholder.json
