[project]
name = "snapdl"
version = "0.1.0"
description = "SnapDL - Download whatever you need whenever you want"
requires-python = ">=3.8"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "arrow==1.4.0",
    "binaryornot==0.4.4",
    "blinker==1.9.0",
    "certifi==2025.10.5",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.1.8",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.119.1",
    "Flask==3.1.2",
    "flask-cors==6.0.1",
    "flet==0.28.3",
    "flet-cli==0.28.3",
    "flet-permission-handler==0.1.0",
    "flet-video==0.1.1",
    "flet-web==0.28.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    # "httptools==0.6.1",
    "httpx==0.28.1",
    "idna==3.11",
    "importlib_metadata==8.7.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pydantic==2.33.2",
    "pydantic_core==2.41.4",
    "Pygments==2.19.2",
    "pypng==0.20220715.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-slugify==8.0.4",
    "PyYAML==6.0.2",
    "qrcode==7.4.2",
    "repath==0.9.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "screeninfo==0.8.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "unlimited-youtube-search==0.1.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchdog==4.0.2",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "Werkzeug==3.1.3",
    "yt-dlp==2025.10.14",
    "zipp==3.23.0"
]

[tool.flet]
org = "com.vxncius.snapdl"
name = "SnapDL"
icon = "assets/favicon.png"
path = "main.py"

permissions = [
    "internet",
    "notification",
    "post_notifications",
    "storage",
    "foreground_service"
]

[tool.flet.android.manifest_application]
"android:requestLegacyExternalStorage" = "true"

[tool.flet.assets]
include = [
    "assets/*",
    "binaries/*",
    "fonts/*"
]
